# nushell-playground

./: README.md  bookmark-launcher.nu  completer.nu  hello.nu  hooks.nu
plugin/: Cargo.toml  README.md
plugin/src/: lib.rs  main.rs
plugin/src/commands/: hello.rs  main.rs  mod.rs
tic-tac-toe/: system_prompt.txt  tic-tac-toe.nu
